force-app/main/default/objects/Tour_Expense__c/Tour_Expense__c.object-meta.xml
<CustomObject>
    <label>Tour Expense</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tour Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>