force-app/main/default/objects/Tour_Expense__c/fields/People__c.field-meta.xml
<CustomField>
    <fullName>People__c</fullName>
    <label>People</label>
    <referenceTo>People__c</referenceTo>
    <relationshipLabel>Tour Expenses</relationshipLabel>
    <relationshipName>Tour_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>