force-app/main/default/objects/Tour_Expense__c/fields/TripId__c.field-meta.xml
<CustomField>
    <fullName>TripId__c</fullName>
    <formula>People__r.Tour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TripId</label>
    <type>Text</type>
</CustomField>